--- a/app/sass/_settings.sass
+++ b/app/sass/_settings.sass
@@ -122,7 +122,7 @@ $primary-color: #0072bc
 
 $primary-color-alt: lighten($primary-color, 10%)
 
-$secondary-color: #676565
+$secondary-color: #16161D
 
 $alert-color: #f04124
 
