--- a/app/sass/_styleguide-only.sass
+++ b/app/sass/_styleguide-only.sass
@@ -75,6 +75,7 @@ h2
   a
     color: $secondary-color
   a.hover
+    color: $iron
     border-bottom: 2px solid $iron
 
   
@@ -160,6 +161,7 @@ h5
   a
     color: $secondary-color
   a.hover
+    color: $iron
     border-bottom: 2px solid $iron
 
 .note-teaser
@@ -167,7 +169,7 @@ h5
   padding: 3.5rem 1.75rem 3rem 1.75rem
 
 .footer
-  margin-bottom: 1.75rem
+  margin-bottom: .875rem
   margin-top: 3.5rem
 
 .uva
