--- a/app/sass/_settings.sass
+++ b/app/sass/_settings.sass
@@ -79,7 +79,7 @@ $include-html-global-classes: $include-html-classes
 // $include-html-grid-classes: $include-html-classes;
 // $include-xl-html-grid-classes: false;
 
-$row-width: rem-calc(2000)
+$row-width: 90rem
 // $total-columns: 12;
 $column-gutter: 1.75rem
 
@@ -122,7 +122,7 @@ $primary-color: #0072bc
 
 $primary-color-alt: lighten($primary-color, 10%)
 
-$secondary-color: #676565
+$secondary-color: #16161D
 
 $alert-color: #f04124
 
@@ -183,8 +183,8 @@ $blue-wordpress: #22769B
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 // $small-range: (0em, 40em);
-$medium-range: (40.063em, 64em)
-$large-range: (64.063em, 90em)
+$medium-range: (40.063em, 60em)
+$large-range: (60.063em, 90em)
 // $xlarge-range: (90.063em, 120em);
 // $xxlarge-range: (120.063em, 99999999em);
 
@@ -256,23 +256,23 @@ $h1-font-size: $h2-font-size * 1.618
 
 
 // We use these to control header size reduction on small screens
-$h1-font-reduction: rem-calc(16)
-$h2-font-reduction: rem-calc(6)
-$h3-font-reduction: rem-calc(2)
+$h1-font-reduction: 1.75rem
+$h2-font-reduction: .875rem
+$h3-font-reduction: rem-calc(6)
 $h4-font-reduction: rem-calc(0)
 // $h5-font-reduction: 0 !default;
 // $h6-font-reduction: 0 !default;
 
 // These control how subheaders are styled.
-// $subheader-line-height: 1.4;
-// $subheader-font-color: scale-color($header-font-color, $lightness: 35%);
+// $subheader-line-height: 1.1;
+// $subheader-font-color: #777777;
 // $subheader-font-weight: $font-weight-normal;
-// $subheader-top-margin: .2rem;
-// $subheader-bottom-margin: .5rem;
+// $subheader-top-margin: 0;
+// $subheader-bottom-margin: 0;
 
 // A general <small> styling
 // $small-font-size: 60%;
-// $small-font-color: scale-color($header-font-color, $lightness: 35%);
+$small-font-color: #777777
 
 // We use these to style <code> tags
 // $code-color: $oil;
