added contact page and sign image

--- a/app/sass/_appstyles.sass
+++ b/app/sass/_appstyles.sass
@@ -46,9 +46,9 @@ p.heading
 
 //*******************************/
 
-//a.action-link
-  //&:hover
-    //text-decoration: none
+a.action-link
+  &:hover
+    text-decoration: none
 
 //********************************
 
