--- a/app/sass/_styleguide-only.sass
+++ b/app/sass/_styleguide-only.sass
@@ -60,7 +60,7 @@ h1
 
   a
     color: $secondary-color
-  a.hover
+  a:hover
     color: $monsoon
 
 h2
@@ -74,9 +74,9 @@ h2
 
   a
     color: $secondary-color
-  a.hover
-    color: $iron
-    border-bottom: 2px solid $iron
+    &:hover
+      color: $monsoon
+      border-bottom: 2px solid $iron
 
   
 h3
@@ -90,9 +90,9 @@ h3
 
   a
     color: $secondary-color
-  a.hover
-    color: $secondary-color
-    border-bottom: 2px solid $iron
+    &:hover
+      color: $monsoon
+      border-bottom: 2px solid $iron
 
 
 h4
@@ -112,7 +112,7 @@ h5
   a
     color: $monsoon
     border-bottom: 1px solid $primary-color
-  a.hover
+  a:hover
     color: $primary-color
     border-bottom: 1px solid $primary-color
 
@@ -148,9 +148,6 @@ h5
   padding-bottom: 1.75rem
   z-index: -100
 
-.tags
-  padding-top: 1.75rem
-
 .caption-large
   position: absolute
   margin-top: -5.25rem
@@ -160,24 +157,35 @@ h5
   background-color: $white
   a
     color: $secondary-color
-  a.hover
+  a:hover
     color: $iron
     border-bottom: 2px solid $iron
 
 .note-teaser
-  background-color: $vapor
-  padding: 3.5rem 1.75rem 3rem 1.75rem
+  border-top: 2px solid $smoke
+  padding-top: .874rem
+  margin-bottom: 3.5rem
+
+.all-teaser
+  border-top: 2px solid $smoke
+  padding-top: .874rem
+  margin-bottom: 1.75rem
+
+
+.custom-list
+  list-style-type: none
+
 
 .footer
   margin-bottom: .875rem
   margin-top: 3.5rem
+
 
 .uva
   color: #d56e31
 
 .tacoma
   color: #4f8eba
-
 
 
 
