--- a/app/sass/_settings.sass
+++ b/app/sass/_settings.sass
@@ -103,7 +103,7 @@ $ff-alt: $founders
 
 // We use these to control various global styles
 // $body-bg: $white;
-$body-font-color: #16161D
+$body-font-color: #222222
 $body-font-family: $ff-primary
 // $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
@@ -122,7 +122,7 @@ $primary-color: #0072bc
 
 $primary-color-alt: lighten($primary-color, 10%)
 
-$secondary-color: #16161D
+$secondary-color: #222222
 
 $alert-color: #f04124
 
@@ -240,20 +240,19 @@ $paragraph-line-height: 1.4
 // $header-font-family: $body-font-family;
 // $header-font-weight: $font-weight-normal;
 //$header-font-style: $body-font-family
-$header-font-color: #16161D
+$header-font-color: #222222
 // $header-line-height: 1.4;
 // $header-top-margin: .2rem;
 // $header-bottom-margin: .5rem;
 // $header-text-rendering: optimizeLegibility;
 
-// We use these to control header font sizes
-// $h6-font-size: 1rem;
+// We use these to control header font size:
 $h5-font-size: rem-calc(20)
 $h4-font-size: rem-calc(20)
 $h3-font-size: $paragraph-font-size * 1.618
 $h2-font-size: $h3-font-size * 1.618
 $h1-font-size: $h2-font-size * 1.618
-
+$h6-font-size: $h2-font-size
 
 // We use these to control header size reduction on small screens
 $h1-font-reduction: 1.75rem
