--- a/app/sass/_settings.sass
+++ b/app/sass/_settings.sass
@@ -247,12 +247,13 @@ $header-font-color: #222222
 // $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font size:
+//$h6-font-size: rem-calc(20)
 $h5-font-size: rem-calc(20)
 $h4-font-size: rem-calc(20)
 $h3-font-size: $paragraph-font-size * 1.618
 $h2-font-size: $h3-font-size * 1.618
 $h1-font-size: $h2-font-size * 1.618
-$h6-font-size: $h2-font-size
+//$h6-font-size: rem-calc(20)
 
 // We use these to control header size reduction on small screens
 $h1-font-reduction: 1.75rem
