--- a/app/sass/_styleguide-only.sass
+++ b/app/sass/_styleguide-only.sass
@@ -182,11 +182,12 @@ h5
   z-index: -100
 
 .caption-small
-  font-size: 1.125rem
+  font-size: 1rem
   padding-left: .4rem
   padding-top: .125rem
   margin-top: -1.75rem
   background-color: #ffffff
+  opacity: .4
   padding-right: 1rem
   padding-bottom: 1rem
   opacity: .6
